--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -564,10 +564,22 @@ Several tag names follow conventions indicating how their values are represented
 \begin{samepage}
 The following INFO keys are reserved for encoding structural variants.
 In general, when these keys are used by imprecise variants, the values should be best estimates.
-When a key reflects a property of a single alt allele (e.g.\ SVLEN), then when there are multiple alt alleles there will be multiple values for the key corresponding to each allele (e.g.\ SVLEN=-100,-110 for a deletion with two distinct alt alleles).
+When present, per allele values must be specified for all ALT alleles (including non-structural alleles).
+Except in lists of strings, the missing value should be used as a placeholder for the ALT alleles for which the key does not have a meaningful value.
+The empty string should be used to encode missing values in lists of strings.
+
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=IMPRECISE,Number=0,Type=Flag,Description="Imprecise structural variation">
+\end{verbatim}
+\normalsize
+
+Indicates that this record contains an imprecise structural variant $ALT$ allele. ALT alleles missing $CIPOS$ are to be interpreted as imprecise events with an unspecified confidence interval.
+
+If a precise ALT allele is present in a record with the $IMPRECISE$ flag, $CIPOS$ must be explicitly set for that allele, even if it is `0,0`.
+
+\footnotesize
+\begin{verbatim}
 ##INFO=<ID=NOVEL,Number=0,Type=Flag,Description="Indicates a novel structural variation">
 ##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the variant described in this record">
 \end{verbatim}
@@ -593,18 +605,55 @@ The reserved values must be used for the types listed below:
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=SVLEN,Number=.,Type=Integer,Description="Difference in length between REF and ALT alleles">
+##INFO=<ID=SVLEN,Number=.,Type=Integer,Description="Length of the structural variant">
 \end{verbatim}
 \normalsize
-One value for each ALT allele. Longer ALT alleles (e.g.\ insertions) have positive values, shorter ALT alleles (e.g.\ deletions) have negative values.
+
+One value for each ALT allele.
+
+SVLEN is defined for $INS$, $DUP$, $INV$, and $DEL$ symbolic alleles as the number of the inserted, duplicated, inverted, and deleted bases respectively.
+SVLEN is defined for $CNV$ symbolic alleles as the length of the segment over which the copy number variant is defined.
+The missing value should be used for all other ALT allele, including ALT alleles using breakend notation.
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=CIPOS,Number=2,Type=Integer,Description="Confidence interval around POS for imprecise variants">
+##INFO=<ID=CIPOS,Number=.,Type=Integer,Description="Confidence interval around POS for imprecise variants">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of ALT alleles.
+$CIPOS$ consists of successive pairs of records indicating the start and end offsets relative to $POS$ of the confidence interval for each ALT allele.
+For example, $CIPOS=-5,5,0,0$ indicates a 5bp confidence interval in each direction for the first ALT allele, and an exact position for the second alt allele.
+
+When breakpoint sequence homology exists, $CIPOS$ should be used in conjunction with $HOMSEQ$ to specify the interval of homology.
+
+If both $IMPRECISE$ and $CIPOS$ are omitted, $CIPOS$ is implicitly defined as 0,0 for all alleles.
+
+Each $CIPOS$ interval must span 0. That is, the lower bound cannot be greater than 0, and the upper bound cannot be less than 0.
+
+\footnotesize
+\begin{verbatim}
 ##INFO=<ID=CIEND,Number=2,Type=Integer,Description="Confidence interval around END for imprecise variants">
-##INFO=<ID=HOMLEN,Number=.,Type=Integer,Description="Length of base pair identical micro-homology at event breakpoints">
-##INFO=<ID=HOMSEQ,Number=.,Type=String,Description="Sequence of base pair identical micro-homology at event breakpoints">
-##INFO=<ID=BKPTID,Number=.,Type=String,Description="ID of the assembled alternate allele in the assembly file">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of ALT alleles.
+$CIEND$ consists of successive pairs of records indicating the start and end offsets relative to $END$ of the confidence interval for each ALT allele.
+For example, $CIEND=-5,5,.,.$ indicates a 5bp confidence interval in each direction around the end position for the first ALT allele, and no $CIEND$ is defined for the second alt allele.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=HOMLEN,Number=A,Type=Integer,Description="Length of base pair identical micro-homology at event breakpoints">
+\end{verbatim}
+\normalsize
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=HOMSEQ,Number=A,Type=String,Description="Sequence of base pair identical micro-homology at event breakpoints">
+\end{verbatim}
+\normalsize
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=BKPTID,Number=A,Type=String,Description="ID of the assembled alternate allele in the assembly file">
 \end{verbatim}
 \normalsize
 For precise variants, the consensus sequence the alternate allele assembly is derivable from the REF and ALT fields.
@@ -612,23 +661,58 @@ However, the alternate allele assembly file may contain additional information a
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=MEINFO,Number=4,Type=String,Description="Mobile element info of the form NAME,START,END,POLARITY">
-##INFO=<ID=METRANS,Number=4,Type=String,Description="Mobile element transduction info of the form CHR,START,END,POLARITY">
-##INFO=<ID=DGVID,Number=1,Type=String,Description="ID of this element in Database of Genomic Variation">
-##INFO=<ID=DBVARID,Number=1,Type=String,Description="ID of this element in DBVAR">
-##INFO=<ID=DBRIPID,Number=1,Type=String,Description="ID of this element in DBRIP">
-##INFO=<ID=MATEID,Number=.,Type=String,Description="ID of mate breakends">
-##INFO=<ID=PARID,Number=1,Type=String,Description="ID of partner breakend">
-##INFO=<ID=EVENT,Number=1,Type=String,Description="ID of event associated to breakend">
-##INFO=<ID=CILEN,Number=2,Type=Integer,Description="Confidence interval around the inserted material between breakends">
-##INFO=<ID=DP,Number=1,Type=Integer,Description="Read Depth of segment containing breakend">
-##INFO=<ID=DPADJ,Number=.,Type=Integer,Description="Read Depth of adjacency">
-##INFO=<ID=CN,Number=1,Type=Integer,Description="Copy number of segment containing breakend">
-##INFO=<ID=CNADJ,Number=.,Type=Integer,Description="Copy number of adjacency">
-##INFO=<ID=CICN,Number=2,Type=Integer,Description="Confidence interval around copy number for the segment">
+##INFO=<ID=MEINFO,Number=.,Type=String,Description="Mobile element info of the form NAME,START,END,POLARITY">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be four (4) times the number of ALT alleles.
+$MEINFO$ consists of successive quadruplets of records for each ALT allele.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=METRANS,Number=.,Type=String,Description="Mobile element transduction info of the form CHR,START,END,POLARITY">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be four (4) times the number of ALT alleles.
+$MEINFO$ consists of successive quadruplets of records for each ALT allele.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=DGVID,Number=A,Type=String,Description="ID of this element in Database of Genomic Variation">
+##INFO=<ID=DBVARID,Number=A,Type=String,Description="ID of this element in DBVAR">
+##INFO=<ID=DBRIPID,Number=A,Type=String,Description="ID of this element in DBRIP">
+##INFO=<ID=MATEID,Number=A,Type=String,Description="ID of mate breakends">
+##INFO=<ID=PARID,Number=A,Type=String,Description="ID of partner breakend">
+##INFO=<ID=EVENT,Number=A,Type=String,Description="ID of event associated to breakend">
+##INFO=<ID=CILEN,Number=.,Type=Integer,Description="Confidence interval for the SVLEN field">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of ALT alleles.
+$CILEN$ consists of successive pairs of records indicating the lower and upper bounds of the $SVLEN$ confidence interval.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=DP,Number=A,Type=Integer,Description="Read Depth of segment containing breakend">
+##INFO=<ID=DPADJ,Number=A,Type=Integer,Description="Read Depth of adjacency">
+##INFO=<ID=CN,Number=A,Type=Integer,Description="Copy number of segment containing breakend">
+##INFO=<ID=CNADJ,Number=A,Type=Integer,Description="Copy number of adjacency">
+##INFO=<ID=CICN,Number=.,Type=Integer,Description="Confidence interval around copy number for the segment">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of ALT alleles.
+$CICN$ consists of successive pairs of records indicating the lower and upper copy number bounds.
+
+\footnotesize
+\begin{verbatim}
 ##INFO=<ID=CICNADJ,Number=.,Type=Integer,Description="Confidence interval around copy number for the adjacency">
 \end{verbatim}
 \normalsize
+
+If present, the number of entries must be twice the number of ALT alleles.
+$CICNADJ$ consists of successive pairs of records indicating the lower and upper copy number bounds.
 
 \section{FORMAT keys used for structural variants}
 \label{sv-format-keys}
