Fix verbatim line going out of bounds

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -716,7 +716,8 @@ $CICNADJ$ consists of successive pairs of records indicating the lower and upper
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=SVCLAIM,Number=A,Type=String,Description="Claim made by the structural variant call. Valid values are D, J, DJ for abundance, adjacency and both respectively.">
+##INFO=<ID=SVCLAIM,Number=A,Type=String,Description="Claim made by the structural variant call. Valid values are D, J,
+DJ for abundance, adjacency and both respectively.">
 \end{verbatim}
 \normalsize
 
