--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -224,8 +224,8 @@ The URL field specifies the location of a fasta file containing breakpoint assem
 \subsubsection{Contig field format}
 \label{sec-contig-field}
 It is recommended for VCF, and required for BCF, that the header includes tags describing the contigs referred to in the file.
-The structured \texttt{contig} field must include the ID attribute and can includes additional optional fields with
-the following fields reserved:
+The structured \texttt{contig} field must include the ID attribute and can includes additional optional attributes with
+the following ones reserved:
 \begin{itemize}
   \item length: the length of the sequence
   \item md5: MD5 checksum of the sequence as defined in the Sam specification v1\footnote{See Reference MD5 calculation
@@ -238,7 +238,7 @@ the following fields reserved:
 
 For example:
 \begin{verbatim}
-##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.org/assembly.fa, md5=f126cdf8a6e0c7f379d618ff66beb2da, ...>
+##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.org/assembly.fa,md5=f126cdf8a6e0c7f379d618ff66beb2da,...>
 
 \noindent
 Contig names follow the same rules as the SAM format's reference sequence names:
