--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -264,7 +264,7 @@ meanings can be avoided.}
     For example, if an algorithm relies on a {\tt coordinate} sort that, at each coordinate, is further sorted by query name then the header could contain {\tt @HD SO:coordinate SS:coordinate:queryname}.%
 \footnote{The repetition of \emph{sort-order} enables a limited form of validation.
 For example, {\tt @HD SO:queryname SS:coordinate:TLEN} would indicate that the data has been re-sorted (by query name) by a non-{\tt SS}-aware tool and the {\tt SS} field should be ignored.}
-    If the primary sort is not one of the predefined primary sort orders, then {\tt unsorted} should be used and the subsort is effectively the major sort.
+    If the primary sort is not one of the predefined primary sort orders, then {\tt unsorted} should be used and the sub-sort is effectively the major sort.
     For example, if sorted by an auxiliary tag {\tt MI} then by coordinate then the header could contain {\tt @HD SO:unsorted SS:unsorted:MI:coordinate}.
     \newline
     \emph{Regular expression}: {\tt (coordinate|queryname|unsorted)(:[\verb"A-Za-z0-9_-"]+)+}\\\cline{1-3}
@@ -437,8 +437,8 @@ For segments that have been mapped to the reverse strand, the recorded {\sf SEQ}
 	multiple alignment lines, when its alignment is chimeric or when multiple
 	mappings are given.
 \item {\sf FLAG}: Combination of bitwise FLAGs.\footnote{The manipulation of
-bitwise flags is described at \href{http://en.wikipedia.org/wiki/Flag\_field}
-{Wikipedia (see ``Flag field'')} and elsewhere.}
+bitwise flags is described at \href{http://en.wikipedia.org/wiki/Bit\_field}
+{Wikipedia (see ``Bit field'')} and elsewhere.}
 Each bit is explained in the following table:
   \begin{center}\small
   \begin{tabular}{rrl}
@@ -913,7 +913,7 @@ standard-compliant extensions:
 \begin{enumerate}
 \item The {\sf F.EXTRA} bit in the header is set to indicate that extra
   fields are present.
-\item The extra field used by BGZF uses the two subfield ID values 66 and 67 (ascii `BC').
+\item The extra field used by BGZF uses the two subfield ID values 66 and 67 (ASCII `BC').
 \item The length of the BGZF extra field payload (field {\sf LEN} in the
   gzip specification) is 2 (two bytes of payload).
 \item The payload of the BGZF extra field is a 16-bit unsigned integer
@@ -1227,7 +1227,7 @@ calls in average.
 
 In the BAI format, each bin may span $2^{29}$, $2^{26}$, $2^{23}$, $2^{20}$,
 $2^{17}$ or $2^{14}$ bp. Bin 0 spans a 512Mbp region, bins 1--8 span 64Mbp,
-9--72 8Mbp, 73--584 1Mbp, 585--4680 128Kbp, and bins 4681--37448 span 16Kbp
+9--72 8Mbp, 73--584 1Mbp, 585--4680 128kbp, and bins 4681--37448 span 16kbp
 regions.  This implies that this index format does not support reference
 chromosome sequences longer than $2^{29}-1$.
 
