Be more explicit on phred scale definition.

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -167,8 +167,9 @@ r001  147 ref 37 30 9M         =  7 -39 CAGCGGCAT         * NM:i:1
   between the 3rd and the 7th bases inclusive is $[2,7)$. The BAM, BCFv2, BED,
   and PSL formats are using the 0-based coordinate system.
 
-\item[Phred scale] Given a probability $0<p\le 1$, the phred scale of $p$
-  equals $-10\log_{10}p$, rounded to the closest integer.
+\item[Phred scale] Given a probability $0<p\le 1$ of an erroneous
+  call, the phred scale of $p$ equals $-10\log_{10}p$, rounded to the
+  closest integer.
 
 \end{description}
 
