Fix missing flag in example

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -538,7 +538,7 @@ If the modification is not one of the standard common types (listed below) it ca
 For example {\tt C+.76792,57;} is the same as {\tt C+.h,57;}.
 
 An unmodified base of {\tt N} means count any base in {\sf SEQ}, not only those of {\tt N}.
-Thus {\tt N+n,100;} means the 101st base is Xanthosine (n), irrespective of the sequence composition.
+Thus {\tt N+.n,100;} means the 101st base is Xanthosine (n), irrespective of the sequence composition.
 
 The standard code types and their associated ChEBI values are listed
 below, taken from Viner {\it et al.}%
