add line that had been removed

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -239,7 +239,7 @@ the following ones reserved:
 For example:
 \begin{verbatim}
 ##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.org/assembly.fa,md5=f126cdf8a6e0c7f379d618ff66beb2da,...>
-
+\end{verbatim}
 \noindent
 Contig names follow the same rules as the SAM format's reference sequence names:
 they may contain any printable ASCII characters in the range \verb|[!-~]| apart from `{\tt\verb|\|\,,\,"`'\,()\,[]\,\verb|{}|\,<>}' and may not start with `{\tt *}' or `{\tt =}'.
