--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -229,7 +229,7 @@ the following ones reserved:
 \begin{itemize}
   \item length: the length of the sequence
   \item md5: MD5 checksum of the sequence as defined in the Sam specification v1\footnote{See Reference MD5 calculation
-      section in \href{https://samtools.github.io/hts-specs/SAMv1.pdf}{\tt SAMv1.pdf}.} Briefly, the digest
+      section in \href{https://samtools.github.io/hts-specs/SAMv1.pdf}{\tt SAM Format Specification}.} Briefly, the digest
       is calculated excluding all characters outside of the inclusive range 33 (`\char33') to 126 (`\char126').
       and all lowercase characters converted to uppercase. The MD5 digest is calculated as described in
       \href{https://tools.ietf.org/html/rfc1321}{\sl RFC 1321} and presented as a 32 character lowercase hexadecimal number.
@@ -240,6 +240,7 @@ For example:
 \begin{verbatim}
 ##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.org/assembly.fa,md5=f126cdf8a6e0c7f379d618ff66beb2da,...>
 \end{verbatim}
+
 \noindent
 Contig names follow the same rules as the SAM format's reference sequence names:
 they may contain any printable ASCII characters in the range \verb|[!-~]| apart from `{\tt\verb|\|\,,\,"`'\,()\,[]\,\verb|{}|\,<>}' and may not start with `{\tt *}' or `{\tt =}'.
