Test that BEDv1.pdf is suppressed on CI

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -63,6 +63,8 @@ not. Each alignment line has 11 mandatory fields for essential alignment
 information such as mapping position, and variable number of optional
 fields for flexible or aligner specific information.
 
+Test PR.
+
 This specification is for version 1.6 of the SAM and BAM formats.  Each SAM and
 BAM file may optionally specify the version being used via the
 {\tt @HD VN} tag. For full version history see Appendix~\ref{sec:history}. 
